--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -784,7 +784,7 @@ p.indent {
 		#header .logo {
 			display: block;
 			border-bottom: 0;
-			color: inherit;
+			color: #a5a58d;
 			font-weight: 600;
 			letter-spacing: 0.05em;
 			margin: 0 0 2em 0;
