--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -137,18 +137,15 @@ input, select, textarea {
 		}
 
 	a {
-		/*-moz-transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		-webkit-transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		*/ text-decoration: none;
+	    text-decoration: none;
 		color: #585858;
-		border-bottom: dotted 1.3px #ffcc5f;
+		border-bottom: dotted 2.1px #8da0a5;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #ffcc5f !important;
+			color: #8da0a5 !important;
+			font-weight: 900;
 		}
 
 	strong, b {
@@ -210,8 +207,8 @@ input, select, textarea {
 		text-align: center;
 		border-bottom: 0.5px solid #c9c9c9;
 		margin: 10px 0 20px;
-		color: #a5a58d;
-		font-size: 1.2em;
+		color: #8da0a5;
+		font-size: 1.3em;
 	}
 
 	h1 span {
@@ -232,7 +229,7 @@ input, select, textarea {
 		font-weight: 600;
 		line-height: 1;
 		margin: .3em 0 .1em 0;
-        	text-align: center;
+        text-align: center;
 		letter-spacing: 0.01em;
 		font-size: 1.3em;
 	}
@@ -298,6 +295,15 @@ input, select, textarea {
 	}
 
 }
+
+
+		@media screen and (max-width: 360px) {
+
+			h1 {
+				font-size: 1.75em;
+			}
+
+		}
 
 
 	sub {
@@ -429,14 +435,14 @@ input, select, textarea {
 			-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 			transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		*/	background-color: transparent;
-			border: solid 1px #a5a58d;
+			border: solid .8px #8da0a5;
 			border-radius: 4px;
 			width: 2.65em;
 			height: 2.65em;
 			display: inline-block;
 			text-align: center;
 			line-height: 2.65em;
-			color: #a5a58d;
+			color: #8da0a5;
 		}
 
 			.icon.style2:before {
@@ -444,8 +450,10 @@ input, select, textarea {
 			}
 
 			.icon.style2:hover {
-				color: #ffcc5f;
-				border-color: #ffcc5f;
+				color: #8da0a5;
+				border-color: #8da0a5;
+				border: solid 2px #8da0a5;
+				background-color: rgba(157, 178, 184, 0.3);
 			}
 
 			.icon.style2:active {
@@ -740,7 +748,7 @@ input, select, textarea {
 	}
 
 		table tbody tr {
-			border: solid 0px #a5a58d;
+			border: solid 0px #8da0a5;
 			border-left: 0;
 			border-right: 0;
 		}
@@ -802,7 +810,7 @@ input, select, textarea {
 		#header .logo {
 			display: block;
 			border-bottom: 0;
-			color: #a5a58d;
+			color: #8da0a5;
 			font-weight: 600;
 			letter-spacing: 0.01em;
 			margin: 0 0 2em 0;
@@ -867,6 +875,11 @@ input, select, textarea {
 						font-weight: 900;
 						letter-spacing: 0.01em;
 						text-transform: uppercase;
+					}
+
+					#header nav ul li a:hover {
+						font-size: .9em;
+						font-weight: 900;
 					}
 
 					#header nav ul li a[href="#menu"] {
@@ -958,7 +971,7 @@ input, select, textarea {
 		max-width: 80%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		background: #a5a58d;
+		background: #8da0a5;
 		color: #ffffff;
 		cursor: default;
 		visibility: hidden;
@@ -1137,40 +1150,19 @@ input, select, textarea {
                     FOOTER
 -------------------------------------------------- */
 	#footer {
-		/*-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out; */
-		width: 100%;
+	    width: 100%;
 		max-width: 100%;
 		margin-top: 1rem;
 		text-align: center;
 	}
 
 		#footer .copyright {
-			letter-spacing: 0.1rem;
+			letter-spacing: 0.2rem;
 			font-size: 0.6rem;
-			opacity: 1;
+			opacity: .8;
 			margin-bottom: 1;
 			text-transform: uppercase;
 		}
-
-		/*body.is-article-visible #footer {
-			-moz-transform: scale(0.95);
-			-webkit-transform: scale(0.95);
-			-ms-transform: scale(0.95);
-			transform: scale(0.95);
-			-moz-filter: blur(0.1rem);
-			-webkit-filter: blur(0.1rem);
-			-ms-filter: blur(0.1rem);
-			filter: blur(0.1rem);
-			opacity: 1;
-		}
-
-		body.is-preload #footer {
-			opacity: 1;
-		}
-*/
 
 /* -----------------------------------------------
                       WRAPPER
