--- a/assets/css/EIA.css
+++ b/assets/css/EIA.css
@@ -135,18 +135,14 @@ input, select, textarea {
 		}
 
 	a {
-	/*	-moz-transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		-webkit-transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
-		transition: border-bottom-color 0.2s ease, color 0.2s ease;
-	*/	text-decoration: none;
+		text-decoration: none;
 		color: #585858;
-		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
+		border-bottom: dotted 2.1px #8da0a5;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #ffcc5f !important;
+			color: #8da0a5 !important;
 		}
 
 	strong, b {
@@ -200,7 +196,8 @@ input, select, textarea {
 		text-align: center;
 		border-bottom: 0.5px solid #c9c9c9;
 		margin: 10px 0 20px;
-		color: #a5a58d;
+		color: #8da0a5;
+		font-size: 1.3em;
 	}
 
 	h1 span {
@@ -407,15 +404,15 @@ input, select, textarea {
 		}
 
 		.icon.style2 {
-		    background-color: transparent;
-			border: solid 1px #a5a58d;
+			background-color: transparent;
+			border: solid .8px #8da0a5;
 			border-radius: 4px;
 			width: 2.65em;
 			height: 2.65em;
 			display: inline-block;
 			text-align: center;
 			line-height: 2.65em;
-			color: #a5a58d;
+			color: #8da0a5;
 		}
 
 			.icon.style2:before {
@@ -423,12 +420,14 @@ input, select, textarea {
 			}
 
 			.icon.style2:hover {
-				color: #ffcc5f;
-				border-color: #ffcc5f;
+				color: #8da0a5;
+				border-color: #8da0a5;
+				border: solid 2px #8da0a5;
+				background-color: rgba(157, 178, 184, 0.3);
 			}
 
 			.icon.style2:active {
-				background-color: rgba(242, 132, 158, 0.1);
+				background-color: (157, 178, 184, 0.8);
 			}
 
 /* -----------------------------------------------
@@ -438,6 +437,7 @@ input, select, textarea {
 		list-style: decimal;
 		margin: 0 0 2em 0;
 		padding-left: 1.25em;
+		color: #8da0a5 !important;
 	}
 
 		ol li {
@@ -448,6 +448,7 @@ input, select, textarea {
 		list-style: disc;
 		margin: 0 0 2em 0;
 		padding-left: 1em;
+		color: #8da0a5 !important;
 	}
 
 		ul li {
@@ -742,7 +743,6 @@ input, select, textarea {
 
 	}
 
-
 /* -----------------------------------------------
                    HEADER
 -------------------------------------------------- */
@@ -753,7 +753,7 @@ input, select, textarea {
 		#header .logo {
 			display: block;
 			border-bottom: 0;
-			color: #a5a58d;
+			color: #8da0a5;
 			font-weight: 600;
 			letter-spacing: 0.01em;
 			margin: 0 0 2em 0;
@@ -817,6 +817,11 @@ input, select, textarea {
 						font-weight: 900;
 						letter-spacing: 0.01em;
 						text-transform: uppercase;
+					}
+
+					#header nav ul li a:hover {
+						font-size: .9em;
+						font-weight: 900;
 					}
 
 					#header nav ul li a[href="#menu"] {
@@ -908,7 +913,7 @@ input, select, textarea {
 		max-width: 80%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		background: #a5a58d;
+		background: #8da0a5;
 		color: #ffffff;
 		cursor: default;
 		visibility: hidden;
