--- a/assets/css/EIA.css
+++ b/assets/css/EIA.css
@@ -1120,10 +1120,10 @@ input, select, textarea {
 		}
 
 /* -----------------------------------------------
-                   FOOTER
+                  FOOTER
 -------------------------------------------------- */
 	#footer {
-		width: 100%;
+	    width: 100%;
 		max-width: 100%;
 		margin-top: 1rem;
 		text-align: center;
@@ -1132,8 +1132,8 @@ input, select, textarea {
 		#footer .copyright {
 			letter-spacing: 0.2rem;
 			font-size: 0.6rem;
-			opacity: 0.8;
-			margin-bottom: 1;
+			opacity: .8;
+			margin-bottom: 0em;
 			text-transform: uppercase;
 		}
 
