--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -471,6 +471,7 @@ input, select, textarea {
 		list-style: circle;
 		margin: 0 0 0em 0;
 		padding-left: 1.25em;
+		color: #8da0a5 !important;
 	}
 
 		ol li {
@@ -482,6 +483,7 @@ input, select, textarea {
 		margin: 0 0 0em 0;
 		padding-left: 2em;
 		padding-top: 0.4em;
+		color: #8da0a5 !important;
 	}
 
 		ul li {
