--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -470,7 +470,8 @@ input, select, textarea {
 	ol {
 		list-style: circle;
 		margin: 0 0 0em 0;
-		padding-left: 1.25em;
+		padding-left: 3em;
+		padding-top: 0.1em;
 	}
 
 		ol li {
@@ -485,8 +486,7 @@ input, select, textarea {
 		list-style: disc;
 		margin: 0 0 0em 0;
 		padding-left: 2em;
-		padding-top: 0.4em;
-	}
+		padding-top: 0.1em;	}
 
 		ul li {
 			padding-left: 0.5em;
