--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -486,7 +486,8 @@ input, select, textarea {
 		list-style: disc;
 		margin: 0 0 0em 0;
 		padding-left: 2em;
-		padding-top: 0.1em;	}
+		padding-top: 0.1em;
+	}
 
 		ul li {
 			padding-left: 0.5em;
