--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -166,7 +166,8 @@ input, select, textarea {
     }
 
         p.indent {
-            text-indent: 30px;
+            text-indent: 1em;
+	    margin: -.5em 0 0 0;
         }
 /*
 	h1 {
