--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -130,6 +130,15 @@ input, select, textarea {
 		}
 
 		@media screen and (max-width: 1280px) {
+
+			body, input, select, textarea {
+				font-size: 14pt;
+			}
+
+		}
+
+		@media screen and (max-width: 576px) {
+
 			body, input, select, textarea {
 				font-size: 12pt;
 			}
