--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -267,7 +267,7 @@ input, select, textarea {
 
 		h6 {
 		font-weight: 600;
-		line-height: 1;
+		line-height: .3;
 		margin: 1.8rem 0 .5em 0;
         	text-align: left;
 		letter-spacing: 0.02em;
