--- a/assets/css/CV.css
+++ b/assets/css/CV.css
@@ -217,14 +217,14 @@ input, select, textarea {
 
 	h1 span {
 	    background:#fff;
-        padding:0 10px;
+      	  padding:0 10px;
     }
 
 	h2 {
 		font-weight: 600;
 		line-height: 1;
 		margin: .5em 0 0em 0;
-        text-align: center;
+        	text-align: center;
 		letter-spacing: 0.01em;
 		font-size: 2em;
 	}
@@ -232,8 +232,8 @@ input, select, textarea {
 	h3 {
 		font-weight: 600;
 		line-height: 1;
-		margin: .3em 0 .1em 0;
-        text-align: center;
+		margin: .3em 0 0em 0;
+        	text-align: center;
 		letter-spacing: 0.01em;
 		font-size: 1.3em;
 	}
